--- a/Analisis ordenado-Copy1.ipynb
+++ b/Analisis ordenado-Copy1.ipynb
@@ -164,7 +164,6 @@
     "import matplotlib.pyplot as plt\n",
     "import scipy.stats as stats\n",
     "\n",
-    "# Lista de columnas a analizar\n",
     "columns = [\n",
     "    'count_complete_content',\n",
     "    'count_display_selection', 'avg_try_step', 'count_incorrect_attempts',\n",
@@ -180,16 +179,14 @@
     "# Verificar que las columnas existan en el DataFrame\n",
     "columns = [col for col in columns if col in df.columns]\n",
     "\n",
-    "# Estadísticas descriptivas\n",
+    "# Descriptivos\n",
     "stats_summary = df[columns].describe().T\n",
     "stats_summary['variance'] = df[columns].var()\n",
     "print(stats_summary)\n",
     "\n",
-    "# Configuración de gráficos (ajustar el tamaño de los gráficos)\n",
     "fig, axes = plt.subplots(nrows=len(columns), ncols=3, figsize=(20, len(columns)*4))  # Aumentamos la altura\n",
     "axes = axes.flatten()\n",
     "\n",
-    "# Crear histogramas, boxplots y Q-Q plots\n",
     "for i, col in enumerate(columns):\n",
     "    # Histograma\n",
     "    df[col].hist(ax=axes[3*i], bins=20, edgecolor='black', alpha=0.7)\n",
@@ -206,13 +203,8 @@
     "    stats.probplot(df[col].dropna(), dist=\"norm\", plot=axes[3*i+2])\n",
     "    axes[3*i+2].set_title(f'Q-Q Plot de {col}')\n",
     "\n",
-    "# Ajustar diseño\n",
     "plt.tight_layout()\n",
-    "\n",
-    "# Guardar los gráficos en un archivo (por ejemplo, como PNG)\n",
     "plt.savefig('graficos_comportamiento.png', dpi=300)\n",
-    "\n",
-    "# Mostrar los gráficos\n",
     "plt.show()\n"
    ]
   },
@@ -290,14 +282,10 @@
     "\n",
     "results = []\n",
     "\n",
-    "# Calcular la mediana de SE_t1 para dividir en grupos\n",
     "mediana_se_t1 = df['SE_t1'].median()\n",
-    "\n",
-    "# Dividir los datos en alta y baja autoeficacia basada en la mediana\n",
     "high_efficacy = df[df['SE_t1'] > mediana_se_t1]\n",
     "low_efficacy = df[df['SE_t1'] <= mediana_se_t1]\n",
     "\n",
-    "# Evaluar normalidad y homogeneidad para cada variable de autoeficacia\n",
     "for se_var in se_variables:\n",
     "    if se_var in df.columns:\n",
     "        # Prueba de Shapiro-Wilk para normalidad (alto y bajo autoeficacia)\n",
@@ -310,14 +298,12 @@
     "            low_efficacy[se_var].dropna()\n",
     "        )\n",
     "\n",
-    "        # Determinar el test a aplicar según los resultados\n",
     "        test_to_apply = (\n",
     "            \"Paramétrico (t-test)\" \n",
     "            if p_sw_high > 0.05 and p_sw_low > 0.05 and p_levene > 0.05 \n",
     "            else \"No paramétrico (Mann-Whitney U)\"\n",
     "        )\n",
     "\n",
-    "        # Guardar los resultados\n",
     "        results.append({\n",
     "            'Variable SE': se_var,\n",
     "            'Shapiro-Wilk High (p-value)': p_sw_high,\n",
@@ -326,7 +312,6 @@
     "            'Test a utilizar': test_to_apply\n",
     "        })\n",
     "\n",
-    "# Convertir los resultados en un DataFrame para visualizar\n",
     "results_df = pd.DataFrame(results)\n",
     "print(results_df)\n"
    ]
@@ -374,7 +359,6 @@
    "source": [
     "import scipy.stats as stats\n",
     "\n",
-    "# Lista de columnas de comportamiento\n",
     "columnas_comportamiento = [\n",
     "     'count_complete_content',\n",
     "       'count_display_selection', 'avg_try_step', 'count_incorrect_attempts',\n",
@@ -383,7 +367,6 @@
     "       'similar_difficulty_changes', 'easier_changes'\n",
     "]\n",
     "\n",
-    "# Lista de columnas de autoeficacia\n",
     "columnas_autoeficacia = [\n",
     "    'SE01_conf_aprender', 'SE02_autonomia_aprender', 'SE14R_cuesta_ejercicios',\n",
     "    'SE03_resolver_ejercicios', 'SE04_estudiar_tiempo_necesario', \n",
@@ -392,27 +375,21 @@
     "    'SE16R_cuesta_comparacion', 'SE11_entender_clases', 'SE13_resiliencia','SE_t1'\n",
     "]\n",
     "\n",
-    "# Función para realizar las pruebas de dos muestras\n",
     "def realizar_pruebas(df, columnas_comportamiento, columnas_autoeficacia):\n",
     "    resultados = {}\n",
-    "    columnas_significativas = []  # Lista para guardar las columnas significativas\n",
+    "    columnas_significativas = []\n",
     "\n",
     "    # Iterar sobre las columnas de autoeficacia\n",
     "    for col_auto in columnas_autoeficacia:\n",
-    "        # Calcular la mediana de la columna de autoeficacia\n",
     "        mediana_autoeficacia = mediana_se_t1\n",
     "\n",
-    "        # Definir los grupos basados en la mediana\n",
     "        grupo_bajo = df[df[col_auto] < mediana_autoeficacia]\n",
     "        grupo_alto = df[df[col_auto] >= mediana_autoeficacia]\n",
     "        \n",
-    "        # Comprobar que ambos grupos no estén vacíos antes de continuar\n",
     "        if grupo_bajo.empty or grupo_alto.empty:\n",
     "            continue\n",
     "        \n",
-    "        # Evaluar las pruebas para cada columna de comportamiento\n",
     "        for col_comport in columnas_comportamiento:\n",
-    "            # Obtener los datos de comportamiento de ambos grupos\n",
     "            datos_bajo_comport = grupo_bajo[col_comport].dropna()\n",
     "            datos_alto_comport = grupo_alto[col_comport].dropna()\n",
     "\n",
@@ -420,18 +397,15 @@
     "            stat_bajo, p_bajo = stats.shapiro(datos_bajo_comport)\n",
     "            stat_alto, p_alto = stats.shapiro(datos_alto_comport)\n",
     "\n",
-    "            # Evaluar normalidad y elegir la prueba estadística correspondiente\n",
     "            if p_bajo > 0.05 and p_alto > 0.05:\n",
-    "                # Si ambos son normales, realizamos el t-test para dos muestras\n",
     "                stat_t, p_t = stats.ttest_ind(datos_bajo_comport, datos_alto_comport, equal_var=False)\n",
     "                test = \"Two-Sample t-test\"\n",
     "            else:\n",
-    "                # Si no son normales, realizamos el test de Mann-Whitney (Wilcoxon)\n",
     "                stat_mw, p_mw = stats.mannwhitneyu(datos_bajo_comport, datos_alto_comport)\n",
     "                stat_t, p_t = stat_mw, p_mw\n",
     "                test = \"Mann-Whitney U test\"\n",
     "            \n",
-    "            # Solo guardamos e imprimimos los resultados si el p-valor es menor que 0.05\n",
+    "            # Solo guardamos si el p-valor es menor que 0.05\n",
     "            if p_t < 0.05:\n",
     "                if col_comport not in resultados:\n",
     "                    resultados[col_comport] = []\n",
@@ -442,21 +416,17 @@
     "                    'p_value': p_t\n",
     "                })\n",
     "                \n",
-    "                # Agregar la columna a la lista de significativas si no está ya\n",
     "                if col_comport not in columnas_significativas:\n",
     "                    columnas_significativas.append(col_comport)\n",
     "    \n",
     "    return resultados, columnas_significativas\n",
     "\n",
-    "# Comparar las columnas de comportamiento entre los grupos bajos y altos de autoeficacia\n",
     "resultados_comparaciones, columnas_significativas = realizar_pruebas(df, columnas_comportamiento, columnas_autoeficacia)\n",
     "\n",
-    "# Mostrar solo los resultados significativos\n",
     "for col_comport, resultado in resultados_comparaciones.items():\n",
     "    for r in resultado:\n",
     "        print(f\"{col_comport} | Autoeficacia columna: {r['autoeficacia_column']} | Test: {r['test']} | P-valor = {r['p_value']}\")\n",
     "\n",
-    "# Imprimir las columnas de comportamiento significativas\n",
     "print(\"\\nColumnas de comportamiento significativas:\")\n",
     "print(columnas_significativas)\n"
    ]
@@ -495,7 +465,6 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# Lista de columnas de comportamiento\n",
     "columnas_comportamiento = [\n",
     "    'count_complete_content', 'count_display_selection', 'avg_try_step', \n",
     "    'count_incorrect_attempts', 'proportion_hints', 'avg_time_per_step', \n",
@@ -503,28 +472,23 @@
     "    'similar_difficulty_changes', 'easier_changes'\n",
     "]\n",
     "\n",
-    "# Selección de datos de comportamiento\n",
-    "X = df[columnas_comportamiento].dropna()  # Asegúrate de no tener valores faltantes\n",
+    "X = df[columnas_comportamiento].dropna()\n",
     "\n",
-    "# Normalizar los datos (opcional, pero recomendado)\n",
+    "# Normalizar los datos\n",
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
     "\n",
     "# Realizar el análisis factorial (PCA)\n",
-    "pca = PCA(n_components=5)  # Puedes elegir el número de componentes (factores) que deseas\n",
+    "pca = PCA(n_components=5)\n",
     "X_pca = pca.fit_transform(X_scaled)\n",
     "\n",
-    "# Ver la varianza explicada por cada componente\n",
     "print(f'Varianza explicada por cada componente: {pca.explained_variance_ratio_}')\n",
     "print(f'Varianza acumulada: {pca.explained_variance_ratio_.cumsum()}')\n",
     "\n",
-    "# Mostrar las componentes principales (factores)\n",
     "print(f'Componentes principales:\\n{pca.components_}')\n",
     "\n",
-    "# Crear un DataFrame con los factores obtenidos\n",
     "factores_df = pd.DataFrame(X_pca, columns=[f'Factor_{i+1}' for i in range(X_pca.shape[1])])\n",
     "\n",
-    "# Agregar los factores de PCA al DataFrame original\n",
     "df = pd.concat([df, factores_df], axis=1)\n",
     "\n"
    ]
@@ -602,8 +566,6 @@
     "    # Crear una columna binaria basada en la mediana de 'SE_t1'\n",
     "    df[f'{col}_binaria'] = np.where(df[col] >= mediana_se_t1, 1, 0)\n",
     "\n",
-    "\n",
-    "# Ver los primeros registros del DataFrame con las nuevas columnas binarias\n",
     "print(df['SE01_conf_aprender_binaria'])"
    ]
   },
@@ -1080,8 +1042,6 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Asegúrate de que el dataframe 'df' ya esté cargado\n",
-    "# Creamos una lista de las variables a predecir\n",
     "predictors = ['Factor_1', 'Factor_2', 'Factor_3', 'Factor_4']\n",
     "target_variables = [\n",
     "    'SE01_conf_aprender_binaria', 'SE02_autonomia_aprender_binaria', \n",
@@ -1097,7 +1057,6 @@
     "for target in target_variables:\n",
     "    df_copy = df.copy()\n",
     "    \n",
-    "    # Eliminar valores nulos antes del balanceo\n",
     "    df_copy = df_copy.dropna(subset=predictors + [target])\n",
     "    \n",
     "    group_0 = df_copy[df_copy[target] == 0]\n",
@@ -1113,7 +1072,7 @@
     "    X = df_balanced[predictors]\n",
     "    y = df_balanced[target]\n",
     "    \n",
-    "    # Verificar balance antes de train_test_split\n",
+    "    # Verificar balance\n",
     "    print(f'Distribución de y antes de train_test_split:\\n{y.value_counts()}')\n",
     "    \n",
     "    X_train, X_test, y_train, y_test = train_test_split(\n",
