--- a/Filtrado.ipynb
+++ b/Filtrado.ipynb
@@ -107,8 +107,6 @@
     "import json\n",
     "import pandas as pd\n",
     "\n",
-    "# Asegúrate de tener el DataFrame 'usage' con la columna 'extra'\n",
-    "# Listas vacías para almacenar los valores procesados\n",
     "hints = []\n",
     "attempts = []\n",
     "responses = []\n",
@@ -136,10 +134,9 @@
     "        option_selected.append(None)\n",
     "    else:\n",
     "        try:\n",
-    "            # Intentar cargar el JSON\n",
     "            entry = json.loads(item)\n",
     "            \n",
-    "            # Extraer los valores de las claves y agregarlos a las listas\n",
+    "            # Extraer los valores\n",
     "            hints.append(entry.get('hints', None))\n",
     "            attempts.append(entry.get('attempts', None))\n",
     "            \n",
@@ -167,7 +164,7 @@
     "                step_duration.append(None)\n",
     "                last_hint.append(None)\n",
     "            \n",
-    "            # Extraer datos de 'selectionData', si existen\n",
+    "            # Extraer datos de 'selectionData'\n",
     "            if 'selectionData' in entry and entry['selectionData']:\n",
     "                option_best.append(entry['selectionData'][0].get('optionBest', None))\n",
     "                option_code.append(entry['selectionData'][0].get('optionCode', None))\n",
@@ -203,7 +200,6 @@
     "usage['option_title'] = option_title\n",
     "usage['option_selected'] = option_selected\n",
     "\n",
-    "# Ver el DataFrame resultante\n",
     "print(usage)\n",
     "\n"
    ]
@@ -511,10 +507,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Asegurarse de que el DataFrame está ordenado por 'student_id' y 'timestamp'\n",
     "df_sorted = usage.sort_values(by=['student_id', 'timestamp'])\n",
     "\n",
-    "# Lista de estudiantes (asegurarse de que todos estén presentes, incluso si no tienen registros para algunas métricas)\n",
     "all_students = usage['student_id'].unique()\n",
     "\n",
     "# Función para contar las veces que aparece \"completeContent\" en la columna \"verbName\" por \"student_id\"\n",
@@ -531,13 +525,12 @@
     "    # Contamos las ocurrencias de \"loadContent\" por estudiante\n",
     "    load_content_counts = df[df['verbName'] == 'loadContent'].groupby('student_id').size()\n",
     "    \n",
-    "    # Calculamos el promedio de \"tryStep\" por estudiante dividiendo las ocurrencias de \"tryStep\" entre las de \"loadContent\"\n",
+    "    #promedio de \"tryStep\" por estudiante dividiendo \"tryStep\" entre las de \"loadContent\"\n",
     "    try_step_avg = try_step_counts / load_content_counts\n",
     "    \n",
     "    return try_step_avg\n",
     "\n",
     "\n",
-    "# Función para contar los intentos incorrectos por \"student_id\"\n",
     "def count_incorrect_attempts(df):\n",
     "    # Asegurar que 'timestamp' sea de tipo datetime\n",
     "    df['timestamp'] = pd.to_datetime(df['timestamp'], errors='coerce')\n",
@@ -545,7 +538,6 @@
     "    # Ordenar el DataFrame por 'student_id' y 'timestamp'\n",
     "    df = df.sort_values(by=['student_id', 'timestamp']).reset_index(drop=True)\n",
     "    \n",
-    "    # Inicializar lista para intentos incorrectos\n",
     "    incorrect_attempts = []\n",
     "\n",
     "    # Iterar por cada estudiante\n",
@@ -576,14 +568,12 @@
     "    # Asegurar que 'timestamp' sea de tipo datetime\n",
     "    df['timestamp'] = pd.to_datetime(df['timestamp'], errors='coerce')\n",
     "    \n",
-    "    # Filtrar las ocurrencias de 'requestHint' y 'completeContent' por estudiante\n",
     "    request_hint_counts = df[df['verbName'] == 'requestHint'].groupby('student_id').size()\n",
     "    complete_content_counts = df[df['verbName'] == 'completeContent'].groupby('student_id').size()\n",
     "    \n",
     "    # Calcular la proporción de 'requestHint' sobre 'completeContent' para cada estudiante\n",
     "    proportion_hints_per_student = request_hint_counts / complete_content_counts\n",
     "    \n",
-    "    # Convertir a DataFrame para devolver los resultados\n",
     "    proportion_hints_df = proportion_hints_per_student.reset_index(name='proportion_hints')\n",
     "    \n",
     "    return proportion_hints_per_student\n",
@@ -592,12 +582,10 @@
     "#0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000#\n",
     "\n",
     "def avg_time_per_step(df):\n",
-    "    # Asegurarse de que la columna 'timestamp' esté en formato datetime\n",
     "    df['timestamp'] = pd.to_datetime(df['timestamp'], errors='coerce')\n",
     "    \n",
-    "    total_time = []  # Lista para almacenar los promedios por estudiante\n",
+    "    total_time = []\n",
     "    \n",
-    "    # Iterar por cada estudiante\n",
     "    for student_id in df['student_id'].unique():\n",
     "        student_data = df[df['student_id'] == student_id].sort_values(by='timestamp')\n",
     "        \n",
@@ -621,7 +609,7 @@
     "                time_since_last_event = (row['timestamp'] - last_event_time).total_seconds()\n",
     "                step_times.append(time_since_last_event)\n",
     "\n",
-    "                # Calcular el promedio para este bloque\n",
+    "                # Promedio\n",
     "                avg_time_per_step = sum(step_times) / len(step_times) if step_times else 0\n",
     "                total_time.append({'student_id': student_id, 'avg_time_per_step': avg_time_per_step})\n",
     "\n",
@@ -629,10 +617,8 @@
     "                last_event_time = None\n",
     "                step_times = []\n",
     "\n",
-    "    # Crear un DataFrame con los resultados\n",
     "    total_time_df = pd.DataFrame(total_time)\n",
-    "    \n",
-    "    # Si no hay datos, devolver una serie vacía\n",
+    "\n",
     "    if total_time_df.empty:\n",
     "        return pd.Series(dtype='float64')\n",
     "    \n",
@@ -643,7 +629,7 @@
     "\n",
     "\n",
     "def avg_time_until_first_hint(df):\n",
-    "    df['timestamp'] = pd.to_datetime(df['timestamp'], errors='coerce')  # Asegurarse de que las fechas sean del tipo correcto\n",
+    "    df['timestamp'] = pd.to_datetime(df['timestamp'], errors='coerce') \n",
     "    \n",
     "    time_to_first_hint = []\n",
     "    \n",
@@ -651,9 +637,9 @@
     "    for student_id in df['student_id'].unique():\n",
     "        student_data = df[df['student_id'] == student_id].sort_values(by='timestamp')\n",
     "        \n",
-    "        last_load_time = None  # Variable para guardar el último tiempo de 'loadContent'\n",
-    "        total_time = 0  # Para acumular el tiempo total hasta el primer hint\n",
-    "        count = 0  # Para contar cuántos tiempos de hint se han acumulado para este estudiante\n",
+    "        last_load_time = None  \n",
+    "        total_time = 0  \n",
+    "        count = 0 \n",
     "        \n",
     "        for index, row in student_data.iterrows():\n",
     "            if row['verbName'] == 'loadContent':\n",
@@ -666,7 +652,7 @@
     "                \n",
     "                # Acumular el tiempo\n",
     "                total_time += time_difference\n",
-    "                count += 1  # Incrementamos el contador de veces que encontramos un hint\n",
+    "                count += 1 \n",
     "                \n",
     "                # Resetear el último 'loadContent' para no contar más de uno antes del siguiente hint\n",
     "                last_load_time = None\n",
@@ -679,33 +665,26 @@
     "        \n",
     "        time_to_first_hint.append({'student_id': student_id, 'avg_time_to_first_hint': avg_time})\n",
     "    \n",
-    "    # Crear un DataFrame con los resultados\n",
     "    time_to_first_hint_df = pd.DataFrame(time_to_first_hint)\n",
     "    \n",
-    "    # Reindexar para asegurar que todos los estudiantes estén presentes\n",
     "    avg_time_per_student = time_to_first_hint_df.set_index('student_id')['avg_time_to_first_hint']\n",
     "    \n",
     "    return avg_time_per_student\n",
     "\n",
     "\n",
     "def count_difficulty_changes(df):\n",
-    "    # Inicializar las listas para los resultados\n",
     "    student_ids = []\n",
     "    more_difficult_series = []\n",
     "    similar_series = []\n",
     "    easier_series = []\n",
     "\n",
-    "    # Iterar por cada estudiante\n",
     "    for student_id in df['student_id'].unique():\n",
-    "        # Filtrar los datos del estudiante\n",
     "        student_data = df[df['student_id'] == student_id]\n",
     "\n",
-    "        # Inicializar contadores por estudiante\n",
     "        count_major = 0\n",
     "        count_minor = 0\n",
     "        count_similar = 0\n",
     "\n",
-    "        # Iterar por las filas del estudiante\n",
     "        for _, row in student_data.iterrows():\n",
     "            if row['verbName'] == 'displaySelection':\n",
     "                # Verificar el valor de 'option_title' y contar\n",
@@ -716,7 +695,6 @@
     "                elif row['option_title'] == \"Similar\":\n",
     "                    count_similar += 1\n",
     "\n",
-    "        # Guardar los resultados en las listas por estudiante\n",
     "        student_ids.append(student_id)\n",
     "        more_difficult_series.append(count_major)\n",
     "        similar_series.append(count_similar)\n",
@@ -740,7 +718,7 @@
     "    proportion_similar = proportion_similar.fillna(0)\n",
     "    proportion_easier = proportion_easier.fillna(0)\n",
     "\n",
-    "    # Retornar las listas como series de pandas para cada estudiante\n",
+    "    # Retornar las listas\n",
     "    return (\n",
     "        proportion_more_difficult,\n",
     "        proportion_similar,\n",
@@ -749,7 +727,6 @@
     "\n",
     "\n",
     "\n",
-    "# Aplicar la función de cambios de dificultad y descomprimir los resultados\n",
     "more_difficult_series, similar_series, easier_series = count_difficulty_changes(df_sorted)\n",
     "\n",
     "# Unir todas las funciones en un solo DataFrame\n",
@@ -766,10 +743,7 @@
     "    'easier_changes': easier_series\n",
     "})\n",
     "\n",
-    "# Mostrar el DataFrame con los valores totales por estudiante\n",
     "df_totals.fillna(0, inplace=True)\n",
-    "\n",
-    "# Mostrar el DataFrame con una fila por cada estudiante\n",
     "df_totals\n"
    ]
   },
@@ -889,10 +863,8 @@
     "    '09a6f981b89949a9f306e89c419c24'#comportamientoextraño\n",
     "]\n",
     "\n",
-    "# Filtrar los estudiantes para que no aparezcan en el DataFrame\n",
     "summary_df = df_totals.loc[~df_totals.index.isin(students_to_remove)]\n",
     "\n",
-    "# Verificar el DataFrame resultante\n",
     "print(summary_df)\n"
    ]
   },
